[project]
name = "evented"
version = "0.1.0"
description = "Python SDK for evented-rs business logic"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Benjamin Abbitt"}
]
dependencies = [
    "protobuf>=4.25",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=7.0",
]
