[project]
name = "angzarr-poker"
version = "0.1.0"
description = "Poker engine built on angzarr CQRS/ES framework"
requires-python = ">=3.11"
# uv.sources is used for local development with relative path
dependencies = [
    "angzarr-client",
    "protobuf>=5.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "structlog>=24.0.0",
    "behave>=1.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "debugpy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["angzarr", "agg-player", "agg-table", "agg-hand"]

[tool.uv.sources]
angzarr-client = { path = "../../client/python", editable = true }
