[workspace]
resolver = "2"
members = [
    "player/agg",
    "table/agg",
    "table/saga-hand",
    "table/saga-player",
    "hand/agg",
    "hand/saga-table",
    "hand/saga-player",
    "prj-output",
    "hand-flow",
    "tests",
]

[workspace.dependencies]
angzarr-client = { path = "../../client/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
