[workspace]
resolver = "2"
members = [
    "player/agg",
    "player/agg-oo",
    "player/upc",
    "table/agg",
    "table/agg-oo",
    "table/saga-hand",
    "table/saga-hand-oo",
    "table/saga-player",
    "hand/agg",
    "hand/saga-table",
    "hand/saga-player",
    "prj-output",
    "prj-output-oo",
    # "hand-flow",      # TODO: proto field mismatches
    # "hand-flow-oo",   # TODO: proto field mismatches
    "pmg-hand-flow",
    # "pmg-hand-flow-oo", # TODO: proto field mismatches
    "tests",
]

[workspace.dependencies]
angzarr-client = { path = "../../client/rust" }
angzarr-macros = { path = "../../client/rust/angzarr-macros" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"

# Container build profile - fast compilation, no incremental
[profile.container-dev]
inherits = "dev"
incremental = false

# Container release profile - optimized for size
[profile.production]
inherits = "release"
lto = true
opt-level = "z"
strip = true
