[project]
name = "customer-logic"
version = "0.1.0"
description = "Customer bounded context for evented-rs examples"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=5.0.0",
    "grpcio>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
